fixed background not showing on github pages

--- a/projects/survey-form/css/survey-styles.css
+++ b/projects/survey-form/css/survey-styles.css
@@ -1,5 +1,5 @@
 .background, body {
-  background-image: url("/Users/maodayuja/batch14fe/batch14-fe-activities/projects/survey-form/img/image.png"), url("/Users/maodayuja/batch14fe/batch14-fe-activities/projects/survey-form/img/black.jpg");
+  background-image: url(../img/image.png), url(../img/black.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
